# cse341-libraryManagement/routes/books.js
@@ -2,11 +2,12 @@ const express = require("express");
 const routes = express.Router();
 const controller = require("../controllers/books");
 const validateBook = require("../validator/book");
+const {isAuthenticated} = require("../services/authenticate");
 
 routes.get("/", controller.allBooks);
-routes.post("/", validateBook.validationRules(), validateBook.validate, controller.createBook);
+routes.post("/", isAuthenticated, validateBook.validationRules(), validateBook.validate, controller.createBook);
 routes.get("/:id", controller.oneBook);
-routes.put("/:id", controller.updateBook);
-routes.delete("/:id", controller.deleteBook);
+routes.put("/:id", isAuthenticated, controller.updateBook);
+routes.delete("/:id", isAuthenticated, controller.deleteBook);
 
 module.exports = routes;
